testing stretch fix for hack

--- a/components/hackmit.module.css
+++ b/components/hackmit.module.css
@@ -73,7 +73,6 @@
   margin-right: auto;
   justify-content: space-around;
   max-width: 80%;
-  height: 100%;
   margin-bottom: 20px;
 }
 
@@ -84,11 +83,12 @@
   margin-right: auto;
   justify-content: space-around;
   max-width: 80%;
-  height: 100%;
   margin-bottom: 50px;
 }
 
 .column{
+  flex: 1;
+  margin-right: 20px;
   width: 48%;
 }
 
